# Python-Physics-LSTM

./: .flake8  .gitignore  README.md  anim_2d.py  cnn.py  dev_format.sh  downloader_script.ipynb  pyproject.toml  sandbox.py  split_2d.py  split_csv.py  test.py  visualize.ipynb
airfoil-project/: all_airfoil_selig.csv  n0012-selig.dat-polar.csv  simple_model.py  visualize.ipynb  xfoil_python.py
airfoil-project/src/xfoil/: MANIFEST.in
airfoil-project/src/xfoil/src/: i_circle.f90  i_pindex.f90  i_xfoil.f90  m_iopol.f90  m_naca.f90  m_sort.f90  m_spline.f90  m_xbl.f90  m_xblsys.f90  s_xbl.f90  (+6 more)
lstm/: data.py  loader.ipynb  lstm_v3.py  lstm_v4.py  lstm_v5.py  scaling.py  sciann.ipynb  sciann_v1.py  separate.ipynb  sled_experiment.ipynb  split_csv.ipynb  tensor.ipynb  utils.py
lstm_keras/: cnn.ipynb  cnn.py  example.csv  loader.ipynb  lstm_v3.py  lstm_v4.py  sciann.ipynb
lstm_torch/: 2d_model.py  PINNS_LSTM_Arch_Final.drawio  anim_2d.py  baseline.ipynb  data.py  lstm_pytorch.py  models.py  scaling.py  settings.py  split_2d.py  split_csv.ipynb  split_csv.py  training.py
other_scripts/: 2d_model.py  old_split_csv.py  scoop_rnn.ipynb
physics_lstm/: anim_2d.py  configuration.py  data.py  lstm_pytorch.py  models.py  scaling.py  split_2d.py  split_csv.py
physics_lstm/config/: paper.yaml
physics_lstm/notebooks/: sled_2d_data.ipynb
src/xfoil/: README.md  setup.py
src/xfoil/src/: api.f90  i_blpar.f90  i_xbl.f90  m_aread.f90  m_userio.f90  m_xfoil.f90  m_xgdes.f90  m_xgeom.f90  m_xpanel.f90  m_xpol.f90  m_xqdes.f90  s_xfoil.f90
src/xfoil/xfoil/: __init__.py  test.py
(+2 files in other folders)
